<?xml version="1.0"?>
<package>
  <name>measurement_system</name>
  <version>0.0.0</version>
  <description>The measurement_system package</description>
  <maintainer email="equipe.unball@gmail.com">vieira</maintainer>


  
  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>std_msgs</build_depend>
  <build_depend>vision</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
